--- a/testapp/dialog.ui
+++ b/testapp/dialog.ui
@@ -149,6 +149,9 @@
      <property name="frameShadow">
       <enum>QFrame::Sunken</enum>
      </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item>
