--- a/testapp/dialog.ui
+++ b/testapp/dialog.ui
@@ -79,33 +79,33 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_8">
+            <property name="text">
+             <string>Token</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QLineEdit" name="tokenLineEdit">
+            <property name="text">
+             <string>c9dfc94031a2288f8a5bfa9bbcd2a3a1</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
        <item>
-        <layout class="QFormLayout" name="formLayout_3">
-         <item row="0" column="0">
-          <widget class="QLabel" name="label_8">
-           <property name="text">
-            <string>Token</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QLineEdit" name="tokenLineEdit">
-           <property name="text">
-            <string>c9dfc94031a2288f8a5bfa9bbcd2a3a1</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
           <widget class="QLabel" name="label">
            <property name="text">
             <string>Command</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="1">
+         <item>
           <widget class="QComboBox" name="commandCombo"/>
          </item>
         </layout>
@@ -172,6 +172,20 @@
            <widget class="QLineEdit" name="playerWeaponModeLineEdit">
             <property name="text">
              <string>00000111220000020002</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <widget class="QLabel" name="label_9">
+            <property name="text">
+             <string>Guid</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QLineEdit" name="lineEdit">
+            <property name="text">
+             <string>kajnwdoooAAISON12314d</string>
             </property>
            </widget>
           </item>
