--- a/testapp/dialog.ui
+++ b/testapp/dialog.ui
@@ -183,7 +183,7 @@
            </widget>
           </item>
           <item row="4" column="1">
-           <widget class="QLineEdit" name="lineEdit">
+           <widget class="QLineEdit" name="guidLineEdit">
             <property name="text">
              <string>kajnwdoooAAISON12314d</string>
             </property>
